# confluex

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RESULTS.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  benchmark.py  evaluate.py  fusion_evaluate.py  goldset.json  metrics.py  results.json  run_all.py
cognis_vanguard/: __init__.py  cli.py  stix.py
cognis_vanguard/sources/: __init__.py  catalog.py  client.py
data/: gazetteer.json  sample_reports.json
docs/: ARCHITECTURE.md  FEEDS.md  FUSION.md  INTEROP.md  LIMITATIONS.md  METHODS.md  SOLIC_CA9_MAPPING.md
examples/: change_detection_demo.py  corroboration_demo.py  dossier_demo.py  entity_resolution_demo.py  fusion_cop_demo.py  geofence_demo.py  interop_export_demo.py  run_demo.py  tracks_pattern_demo.py
meldkit/: __init__.py  cli.py  report.py  stix.py  vision.py
meldkit/fusion/: __init__.py  cop.py  interop.py
meldkit/sources/: __init__.py  adapters.py  catalog.py  client.py  ingest.py
tests/: test_agents.py  test_bench.py  test_extract.py  test_fusion_adapters.py  test_fusion_admiralty.py  test_fusion_cli.py  test_fusion_cop.py  test_fusion_corroborate.py  test_fusion_entities.py  test_fusion_geofence.py  test_fusion_interop.py  test_fusion_schema.py  test_fusion_tracks.py  test_graph.py  test_index.py  test_llm.py  test_resolve.py  test_sources.py  test_vision.py
