[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meldkit"
version = "0.4.0"
description = "Self-hosted, edge-capable multi-INT fusion & agent orchestration (Meldkit)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["osint", "multi-int", "fusion", "knowledge-graph", "agents",
            "stix", "self-hosted", "edge", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
meldkit = "meldkit.cli:main"

[tool.setuptools]
packages = ["meldkit", "meldkit.sources", "meldkit.fusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
